--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <meta property="og:image" content="" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="./img/favicon.png">
-        <link rel="shortcut icon" href="./img/favicon.png" />
+        <!-- <link rel="apple-touch-icon" href="./img/favicon.png">
+        <link rel="shortcut icon" href="./img/favicon.png" /> -->
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.css">
@@ -59,82 +59,102 @@
           </div>
         </div>
       </div>
-      <div class="panel-hd">
-        <div>
-          <h1 class="name"><span class="lighter-text">Faraz</span> Khan</h1>
-          <p class="profession">UI/UX Designer & Frontend Engineer</p>
-        </div>
-        <div>
-        </div>
-        <div>
-        </div>
-        <div>
+      <div class="vertical-panel">
+        <div class="panel-hd">
           <div>
-          </div>
-        </div>
-        <div>
-        </div>
-      </div>
-      <div class="panel-white">
-        <div>
-          <div class="avatar"><div></div></div>
-          <p class="tagline">Designing rules</p>
-          <p class="about">Hi, I am Faraz Khan, a frontend engineer, with a focus on product design, user experience and design aesthetics. Nature inspires me, and so does people like you. I'am very passionate about creative concepts, music, design and science. </p>
-          <p class="about">I have earned my bachelor's degree in 2017 and designing since 2015, I am also a musician, a singer, a song writer, a brother and a son. </p>
-        </div>
-      </div>
-      <div class="panel-black quote-panel">
-        <div>
-          <div class="avatar"><div></div></div>
-          <p class="quote">For me, "Designing is a combination of problem solving skills, art of making something pleasing to use and also making it to look great."</p>
-
-        </div>
-      </div>
-      <div class="work-white">
-        <div class="work-panel-white">
-          <div>
-            <p class="black-heading">SELECTED WORK</p>
-          </div>
-          <div>
-            <p class="black-heading">SELECTED WORK</p>
-          </div>
-          <div>
-            <p class="black-heading">SELECTED WORK</p>
-          </div>
-          <div>
-            <p class="black-heading">SELECTED WORK</p>
-          </div>
-        </div>
-        <div class="page-indicator">
-          <div class="active">
+            <h1 class="name"><span class="lighter-text">Faraz</span> Khan</h1>
+            <p class="profession">UI/UX Designer & Frontend Engineer</p>
           </div>
           <div>
           </div>
           <div>
           </div>
           <div>
-          </div>
-        </div>
-      </div>
-      <div class="panel-black music-panel">
-        <div>
-          <p class="white-heading">MUSIC</p>
-          <p class="music-bio">My interest in music developed from a very young age, but it was 2011 until I got serious and started my journey of discovering music, as I learnt how play a guitar and piano, I began to realise that there much more I could do. That when I got into music programming. </p>
-          <br>
-          <div><a class="links-underlined">Youtube</a><a class="links-underlined">Instagram</a></div>
-        </div>
-      </div>
-      <div class="panel-white">
-        <div>
-          <p class="black-heading">SAY SOMETHING!</p>
-          <div class="flex"> <div><i class="fa fa-github"></i>
-            <i class="fa fa-instagram"></i></div>
             <div>
-            <i class="fa fa-linkedin"></i>
-            <i class="fa fa-youtube"></i>
             </div>
           </div>
-            <a class="underlined">Or download my resume</a>
+          <div>
+          </div>
+        </div>
+        <div class="panel-white">
+          <div>
+            <div class="avatar"><div></div></div>
+            <p class="tagline">Designing rules</p>
+            <p class="about">Hi, I am Faraz Khan, a frontend engineer, with a focus on product design, user experience and design aesthetics. Nature inspires me, and so does people like you. I'am very passionate about creative concepts, music, design and science. </p>
+            <p class="about">I have earned my bachelor's degree in 2017 and designing since 2015, I am also a musician, a singer, a song writer, a brother and a son. </p>
+          </div>
+        </div>
+        <div class="panel-black quote-panel">
+          <div>
+            <div class="avatar"><div></div></div>
+            <p class="quote">For me, "Designing is a combination of problem solving skills, art of making something pleasing to use and also making it to look great."</p>
+
+          </div>
+        </div>
+        <div class="work-white">
+          <div class="work-panel-white">
+            <div>
+              <p class="black-heading">SELECTED WORK</p>
+            </div>
+            <div>
+              <p class="black-heading">TWO</p>
+            </div>
+            <div>
+              <p class="black-heading">THREE</p>
+            </div>
+            <div>
+              <p class="black-heading">FOUR</p>
+            </div>
+            <div>
+              <p class="black-heading">FIVE</p>
+            </div>
+            <div>
+              <p class="black-heading">SIX</p>
+            </div>
+            <div>
+              <p class="black-heading">SEVEN</p>
+            </div>
+            <div>
+              <p class="black-heading">EIGHT</p>
+            </div>
+          </div>
+          <div class="page-indicator">
+            <div class="active">
+            </div><div>
+            </div><div>
+            </div><div>
+            </div><div>
+            </div><div>
+            </div><div>
+            </div><div>
+            </div>
+          </div>
+          <div class="arrow-right hide-arrow">
+            <img src='./img/arrow.png'>
+          </div>
+          <div class="arrow-left">
+            <img src='./img/arrow.png'>
+          </div>
+        </div>
+        <div class="panel-black music-panel">
+          <div>
+            <p class="white-heading">MUSIC</p>
+            <p class="music-bio">My interest in music developed from a very young age, but it was 2011 until I got serious and started my journey of discovering music, as I learnt how play a guitar and piano, I began to realise that there much more I could do. That when I got into music programming. </p>
+            <div><a class="links-underlined">Youtube</a><a class="links-underlined">Instagram</a></div>
+          </div>
+        </div>
+        <div class="panel-white">
+          <div>
+            <p class="black-heading">SAY SOMETHING!</p>
+            <div class="flex"> <div><i class="fa fa-github"></i>
+              <i class="fa fa-instagram"></i></div>
+              <div>
+              <i class="fa fa-linkedin"></i>
+              <i class="fa fa-youtube"></i>
+              </div>
+            </div>
+              <a class="underlined">Or download my resume</a>
+          </div>
         </div>
       </div>
         <!-- Add your site or application content here -->
