--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta property="og:image" content="" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#111111" />
         <!-- <link rel="apple-touch-icon" href="./img/favicon.png">
         <link rel="shortcut icon" href="./img/favicon.png" /> -->
         <!-- Place favicon.ico in the root directory -->
