--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Faraz Khan</title>
         <meta property="og:url" content="" />
-        <meta property="og:type" content="game" />
+        <meta property="og:type" content="portfolio" />
         <meta property="og:title" content="" />
         <meta property="og:description" content="" />
         <meta property="og:image" content="" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#444444" />
+        <meta name="theme-color" content="#ffffff" />
         <!-- <link rel="apple-touch-icon" href="./img/favicon.png">
         <link rel="shortcut icon" href="./img/favicon.png" /> -->
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.css">
+        <script>
+        document.getElementsByTagName('html')[0].style.setProperty("--view-height", window.screen.availHeight + 'px');</script>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/helpers.css">
 
