improve mobile typography, left and right arrow interaction

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
               <p class="black-heading">EIGHT</p>
             </div>
           </div>
-          <div class="page-indicator">
-            <div class="active">
+          <div class="page-indicator"><div class="active">
             </div><div>
             </div><div>
             </div><div>
@@ -130,8 +129,7 @@
             </div><div>
             </div><div>
             </div><div>
-            </div>
-          </div>
+            </div></div>
           <div class="arrow-right hide-arrow">
             <img src='./img/arrow.png'>
           </div>
