--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 
     </head>
     <body>
+      <div class="loader">
+        <div>
+          <div>L</div>
+          <div>O</div>
+          <div>A</div>
+          <div>D</div>
+          <div>I</div>
+          <div>N</div>
+          <div>G</div>
+        </div>
+      </div>
       <div onclick="goTo('github')" class="github-link">
         <div>
           <i class="fa fa-github"></i>
@@ -48,6 +59,19 @@
           Follow me on Instagram if you like music.
         </div>
       </div>
+      <div class="fixed-links">
+          <span onclick="goTo('youtube')" class="links-underlined">Youtube</span><a onclick="goTo('instagram')" class="links-underlined">Instagram</a>
+      </div>
+      <div class="flex"> <div>
+        <i onclick="goTo('youtube')" class="fa fa-youtube"></i>
+        <i onclick="goTo('instagram')" class="fa fa-instagram"></i></div>
+        <div>
+        <i onclick="goTo('linkedin')" class="fa fa-linkedin"></i>
+        <i  onclick="goTo('github')" class="fa fa-github"></i>
+
+        </div>
+      </div>
+
       </div>
       <nav class="navigation">
         <div>
@@ -159,20 +183,11 @@
           <div>
             <p class="white-heading">MUSIC</p>
             <p class="music-bio">My interest in music developed from a very young age, but it was 2011 until I got serious and started my journey of discovering music, as I learnt how play a guitar and piano, I began to realise that there much more I could do. That when I got into music programming. Subscribe to my Youtube channel and follow me on instagram to get notified about my upcoming content. </p>
-            <div><a onclick="goTo('youtube')" class="links-underlined">Youtube</a><a onclick="goTo('instagram')" class="links-underlined">Instagram</a></div>
           </div>
         </div>
         <div class="panel-white">
           <div>
-            <p class="black-heading">SAY HEY!</p>
-            <div class="flex"> <div><i  onclick="goTo('github')" class="fa fa-github"></i>
-              <i onclick="goTo('instagram')" class="fa fa-instagram"></i></div>
-              <div>
-              <i onclick="goTo('linkedin')" class="fa fa-linkedin"></i>
-              <i onclick="goTo('youtube')" class="fa fa-youtube"></i>
-              </div>
-            </div>
-              <a class="underlined">Or download my resume</a>
+            <p class="black-heading top-head">SAY HEY</p>
           </div>
         </div>
       </div>
