Added favicon, fixed typos

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Faraz Khan</title>
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="www.thefarazkhan.in" />
         <meta property="og:type" content="portfolio" />
-        <meta property="og:title" content="" />
-        <meta property="og:description" content="" />
+        <meta property="og:title" content="UI/UX Designer & A Frontend Engineer" />
+        <meta property="og:description" content="Faraz's Portfolio" />
         <meta property="og:image" content="" />
-        <meta name="description" content="">
+        <meta name="description" content="UI/UX Designer & A Frontend Engineer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#000000" />
-        <!-- <link rel="apple-touch-icon" href="./img/favicon.png">
-        <link rel="shortcut icon" href="./img/favicon.png" /> -->
+        <link rel="apple-touch-icon" href="./logo.png">
+        <link rel="shortcut icon" href="./logo.png" />
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.css">
@@ -58,6 +58,9 @@
         <div class="i-tip">
           Follow me on Instagram if you like music.
         </div>
+      </div>
+      <div class="scroll-icon">
+        <span>S</span>  <span>c</span>  <span>r</span>  <span>o</span>  <span>l</span> <span>l</span>
       </div>
       <div class="fixed-links">
           <span onclick="goTo('youtube')" class="links-underlined">Youtube</span><a onclick="goTo('instagram')" class="links-underlined">Instagram</a>
@@ -119,15 +122,14 @@
           <div>
             <div class="avatar"><div></div></div>
             <p class="tagline">Designing rules</p>
-            <p class="about">Hi, I am Faraz Khan, a frontend engineer, with a focus on product design, user experience and design aesthetics. Nature inspires me, and so does people like you. I'am very passionate about creative concepts, music, design and science. </p>
-            <p class="about">I have earned my bachelor's degree in 2017 and designing since 2015, I am also a musician, a singer, a song writer, a brother and a son. </p>
+            <p class="about">Hi, I am Faraz Khan, a frontend engineer with a focus on product design, user experience and design aesthetics. Nature inspires me and so does people like you. I'am very passionate about creative concepts, design, music and science. </p>
+            <p class="about">I have earned my bachelor's degree in 2017 and designing since 2015. I am also a musician, a singer, a song writer, a brother and a son. </p>
           </div>
         </div>
         <div class="panel-black quote-panel">
           <div>
             <div class="avatar"><div></div></div>
             <p class="quote">For me, "Designing is a combination of problem solving skills, art of making something pleasing to use and also making it to look great."</p>
-
           </div>
         </div>
         <div class="work-white">
@@ -137,27 +139,27 @@
             </div>
             <div>
               <div class="project-img"><img src='./img/quizzag.png' alt='quizzag'/></div>
-              <a href='http://www.thefarazkhan.in/quizzag.php' class="project-link">View Online</a>
+              <!-- <a href='http://www.thefarazkhan.in/quizzag.php' class="project-link">View Online</a> -->
             </div>
             <div>
               <div class="project-img"><img src='./img/easyinvoice.png' alt='easyinvoice'/></div>
-              <a href='http://thefarazkhan.in/invoicesystem.php' class="project-link">View Online</a>
+              <!-- <a href='http://thefarazkhan.in/invoicesystem.php' class="project-link">View Online</a> -->
             </div>
             <div>
               <div class="project-img"><img src='./img/kroble.png' alt='kroble'/></div>
-              <a href='http://thefarazkhan.in/kroble2.html' class="project-link">View Online</a>
+              <!-- <a href='http://thefarazkhan.in/kroble2.html' class="project-link">View Online</a> -->
             </div>
             <div>
               <div class="project-img"><img src='./img/p1.png' alt='portfoliov1'/></div>
-              <a href='http://thefarazkhan.in/portfolio.html' class="project-link">View Online</a>
+              <!-- <a href='http://thefarazkhan.in/portfolio.html' class="project-link">View Online</a> -->
             </div>
             <div>
               <div class="project-img"><img src='./img/p2.png' alt='portfoliov2'/></div>
-              <a href='http://thefarazkhan.in/portfoliov2.html' class="project-link">View Online</a>
+              <!-- <a href='http://thefarazkhan.in/portfoliov2.html' class="project-link">View Online</a> -->
             </div>
             <div>
               <div class="project-img"><img src='./img/p3.png' alt='portfoliov3'/></div>
-              <a href='#' class="project-link">View Online</a>
+              <!-- <a href='#' class="project-link">View Online</a> -->
             </div>
             <div>
               <p class="black-heading">Soon..</p>
@@ -182,7 +184,7 @@
         <div class="panel-black music-panel">
           <div>
             <p class="white-heading">MUSIC</p>
-            <p class="music-bio">My interest in music developed from a very young age, but it was 2011 until I got serious and started my journey of discovering music, as I learnt how play a guitar and piano, I began to realise that there much more I could do. That when I got into music programming. Subscribe to my Youtube channel and follow me on instagram to get notified about my upcoming content. </p>
+            <p class="music-bio">My interest in music developed from a very young age, but it was 2011 until I got serious and started my journey of discovering music, as I learnt how play a music with strings and keys, I began to realise that there's much more I can do. That when I got into music programming & production. Subscribe to my Youtube channel and follow me on instagram to get notified about my upcoming content. </p>
           </div>
         </div>
         <div class="panel-white">
